# momo-fyp

./: .gitignore  README.md  pyproject.toml
arduino/sg90/: sg90.ino
backend/: __init__.py  app.py  config.py  device_utils.py  env_loader.py  model_manager.py  runtime_shutdown.py  state_machine.py  types.py
backend/llm/: ollama_client.py
backend/prompting/: prompt_builder.py
backend/serial/: esp32_link.py
backend/servo/: geometry.py
backend/telemetry/: system_stats.py
backend/tts/: __init__.py  benchmark_worker.py  model_profiles.py  provider_runtimes.py  qwen_clone.py  semantic_runtime.py
backend/tts/decoder_configs/: firefly_gan_vq.yaml
backend/tts/fish_v1_5_decoder/: firefly.py  fsq.py  spectrogram.py
backend/tts/melo_vendor/: __init__.py  models.py
backend/tts/melo_vendor/text/: __init__.py  chinese.py  cleaner.py
backend/vision/: actions.py  features.py  person_detector.py  pose_tracker.py  runtime.py
esp32/sg90/: sg90.ino
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js  style.css
frontend/src/components/: CameraPanel.tsx  ConfigPanel.tsx  DeviceStatusBar.tsx  RuntimeOverview.tsx  SerialMonitor.tsx  StatusTable.tsx
frontend/src/lib/: types.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/styles/: app.css
resource/: foolproof.md  logic.csv
resource/example/: idle-sentences.csv  track-example-1.csv  track-example-2.csv  track-example-3.csv
resource/md/: system-persona_idle.md  system-persona_tracking.md
resource/voice/: transcript.txt  transcript2.txt  國立臺北藝術大學 18.m4a
resource/voice/few-shot-ref/: alien.txt
scripts/: gpt_sovits_v4_fewshot.py
src/: __init__.py  audio_playback.py  config.py  few_shot.py  geometry_eyes.py  gpu_metrics.py  main.py  ollama_client.py  runtime.py  runtime_log.py  serial_servo.py  state_machine.py  tts_qwen.py  vision.py
tests/: conftest.py  test_actions.py  test_api.py  test_config.py  test_device_utils.py  test_env_loader.py  test_features.py  test_gpt_sovits_v4_fewshot.py  test_prompt_builder.py  test_serial_link.py  test_servo_geometry.py  test_tts_benchmark.py
